updated some markdowns

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -554,14 +554,12 @@
     "   - **Numerical Features Scaling:** We apply `StandardScaler` to scale numerical features (e.g., age, ledd, on/off times) to have zero mean and unit variance. This is important because many machine learning models perform better when numerical features are on the same scale.\n",
     "   - **Categorical Features Encoding:** We apply `OneHotEncoder` to convert categorical features (e.g., `cohort`, `gene`) into a numerical format. This transformation creates binary columns for each unique category value, allowing the model to handle these features effectively.\n",
     "\n",
-    "3. **Handling 'sexM' Feature:**\n",
-    "   - The `sexM` column is already binary (0/1), so it is added manually to the transformed data after scaling and encoding the features. This ensures that the column is kept in its original form and included in the final transformed dataset.\n",
     "\n",
-    "4. **Storing Transformed Data:**\n",
+    "3. **Storing Transformed Data:**\n",
     "   - The transformed training and testing datasets (`X_train_transformed` and `X_test_transformed`) for each fold are stored in separate lists. Similarly, the target variables (`y_train` and `y_test`) for each fold are also stored.\n",
     "   - This allows for easy access to the transformed data for each fold during model training and evaluation.\n",
     "\n",
-    "5. **Why We Are Doing This:**\n",
+    "4. **Why We Are Doing This:**\n",
     "   - **Cross-validation:** By using `GroupShuffleSplit`, we ensure that we evaluate the model using 5 different splits of the data, which helps in assessing the model's robustness and generalizability across different subsets of the dataset.\n",
     "   - **Feature Transformation:** Scaling numerical features ensures that they are on a comparable scale, preventing any single feature from dominating the learning process. Encoding categorical variables allows the model to learn from them effectively.\n",
     "   - **Manual Handling of 'sexM':** Since `sexM` is a binary feature, we ensure that it remains intact by adding it back to the transformed data after encoding the other features.\n",
@@ -8099,7 +8097,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## İKİ SUBMİSSİON ARASI FARKA BAKMAYI UNUTMA!"
+    "## Submission CSV File for the challenge"
    ]
   },
   {
